Remove redundant build settings